[gd_scene load_steps=8 format=3 uid="uid://7lhw0ql55qou"]

[ext_resource type="Script" path="res://abilities/code/spark.gd" id="1_1hhn5"]
[ext_resource type="Script" path="res://components/HitboxComponent.gd" id="2_s5p4c"]
[ext_resource type="Texture2D" uid="uid://c2ssmsadnm8b" path="res://art/Abilities/spark.png" id="3_h3gh1"]
[ext_resource type="Script" path="res://components/HealthComponent.gd" id="4_h3bnm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7larw"]
radius = 800.0

[sub_resource type="CircleShape2D" id="CircleShape2D_eir0k"]
radius = 7.07107

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ou26b"]
size = Vector2(8.50559, 6.93475)

[node name="Spark" type="RigidBody2D"]
collision_layer = 64
collision_mask = 9
gravity_scale = 0.0
script = ExtResource("1_1hhn5")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_7larw")

[node name="ThrowTime" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HitboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 2
collision_mask = 0
script = ExtResource("2_s5p4c")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_eir0k")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1.19209e-07, -9.53674e-07)
scale = Vector2(0.0256214, 0.0257031)
texture = ExtResource("3_h3gh1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 18.5)
scale = Vector2(4.46765, 2.45142)
shape = SubResource("RectangleShape2D_ou26b")

[node name="HealthComponent" type="Node2D" parent="." node_paths=PackedStringArray("heart")]
script = ExtResource("4_h3bnm")
MAX_HEALTH = 25.0
current_Health = 25.0
heart = NodePath("..")

[connection signal="ready_to_fire" from="." to="." method="_on_ready_to_fire"]
